@@ -2,19 +2,35 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vcprop="clr-namespace:Virtual_Crosshair.Properties"
-        Title="Settings" Height="200" Width="325" MinHeight="200" MinWidth="325" Closing="Window_Closing">
+        Title="Settings" Height="250" Width="325" MinHeight="200" MinWidth="325" Closing="Window_Closing">
     <Grid>
-        <Slider x:Name="HorizontalOffsetCtl" Value="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=HorizontalOffset}" IsSnapToTickEnabled="True" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10,10,10,0" Minimum="-20" Maximum="20" ValueChanged="HorizontalOffsetCtl_ValueChanged" TickPlacement="BottomRight" SmallChange="1"/>
-        <Slider x:Name="VerticalOffsetCtl" Value="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=VerticalOffset}" IsSnapToTickEnabled="True" HorizontalAlignment="Left" Margin="10,39,0,13" VerticalAlignment="Stretch" Orientation="Vertical" Minimum="-20" Maximum="20" ValueChanged="VerticalOffsetCtl_ValueChanged" SmallChange="1" TickPlacement="BottomRight"/>
-        <Slider x:Name="SizeCtl" Value="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=Scaling}"  IsSnapToTickEnabled="True" HorizontalAlignment="Stretch" Margin="132,74,10,0" VerticalAlignment="Top" Maximum="20" Minimum="-20" ValueChanged="SizeCtl_ValueChanged" SmallChange="1" TickPlacement="BottomRight"/>
-        <Label x:Name="lblSize" Content="Size" HorizontalAlignment="Left" Margin="96,66,0,0" VerticalAlignment="Top"/>
+        <Slider x:Name="HorizontalOffsetCtl" Value="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=HorizontalOffset}" IsSnapToTickEnabled="True" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="39,10,10,0" Minimum="-20" Maximum="20" ValueChanged="HorizontalOffsetCtl_ValueChanged" TickPlacement="BottomRight" SmallChange="1" AutoToolTipPlacement="TopLeft"/>
+        <Slider x:Name="VerticalOffsetCtl" Value="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=VerticalOffset}" IsSnapToTickEnabled="True" HorizontalAlignment="Left" Margin="15,39,0,13" VerticalAlignment="Stretch" Orientation="Vertical" Minimum="-20" Maximum="20" ValueChanged="VerticalOffsetCtl_ValueChanged" SmallChange="1" TickPlacement="BottomRight" AutoToolTipPlacement="TopLeft"/>
+        <Slider x:Name="SizeCtl" Value="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=Scaling}"  IsSnapToTickEnabled="True" HorizontalAlignment="Stretch" Margin="132,118,10,0" VerticalAlignment="Top" Maximum="20" Minimum="-20" ValueChanged="SizeCtl_ValueChanged" SmallChange="1" TickPlacement="BottomRight"/>
+        <Label x:Name="lblSize" Content="Size" HorizontalAlignment="Left" Margin="96,110,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="MonitorChoiceCtl" SelectedIndex="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=SelectedMonitorIndex}"
-                  HorizontalAlignment="Right" Margin="0,107,87,0" VerticalAlignment="Top" Width="80" SelectionChanged="MonitorChoiceCtl_SelectionChanged"/>
-        <ComboBox x:Name="ImageChoiceCtl" SelectedIndex="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=SelectedImageIndex}" HorizontalAlignment="Right" Margin="0,137,35,0" VerticalAlignment="Top" Width="132" SelectionChanged="ImageChoiceCtl_SelectionChanged"/>
-        <Label x:Name="lblImage" Content="Image" HorizontalAlignment="Right" Margin="0,133,172,0" VerticalAlignment="Top" Width="44"/>
+                  HorizontalAlignment="Right" Margin="0,151,87,0" VerticalAlignment="Top" Width="80" SelectionChanged="MonitorChoiceCtl_SelectionChanged"/>
+        <ComboBox x:Name="ImageChoiceCtl" SelectedIndex="{Binding Mode=OneWayToSource, Source={x:Static vcprop:Settings.Default}, Path=SelectedImageIndex}" HorizontalAlignment="Right" Margin="0,181,35,0" VerticalAlignment="Top" Width="132" SelectionChanged="ImageChoiceCtl_SelectionChanged"/>
+        <Label x:Name="lblImage" Content="Image" HorizontalAlignment="Right" Margin="0,177,172,0" VerticalAlignment="Top" Width="44"/>
         <TextBox x:Name="txtHorizontal" HorizontalAlignment="Right" Height="23" Margin="0,39,10,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="46" TextAlignment="Center"/>
         <TextBox x:Name="txtVertical" HorizontalAlignment="Left" Height="23" Margin="39,0,0,13" TextWrapping="Wrap" Text="0" VerticalAlignment="Bottom" Width="46" TextAlignment="Center"/>
-        <TextBox x:Name="txtSize" HorizontalAlignment="Right" Height="23" Margin="0,103,10,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="46" TextAlignment="Center"/>
-        <Label x:Name="lblMonitor" Content="Monit" HorizontalAlignment="Right" Margin="0,103,172,0" VerticalAlignment="Top" Width="44"/>
+        <TextBox x:Name="txtSize" HorizontalAlignment="Right" Height="23" Margin="0,147,10,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="46" TextAlignment="Center"/>
+        <Label x:Name="lblMonitor" Content="Monit" HorizontalAlignment="Right" Margin="0,147,172,0" VerticalAlignment="Top" Width="44"/>
+        <Label Content="H:" HorizontalAlignment="Left" Margin="74,39,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cboHorizScale" HorizontalAlignment="Left" Margin="113,45,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" SelectionChanged="cboHorizScale_SelectionChanged">
+            <ComboBoxItem>20</ComboBoxItem>
+            <ComboBoxItem>50</ComboBoxItem>
+            <ComboBoxItem>100</ComboBoxItem>
+            <ComboBoxItem>200</ComboBoxItem>
+            <ComboBoxItem>500</ComboBoxItem>
+        </ComboBox>
+        <Label Content="V:" HorizontalAlignment="Left" Margin="74,76,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cboVertScale" HorizontalAlignment="Left" Margin="113,76,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" SelectionChanged="cboVertScale_SelectionChanged">
+            <ComboBoxItem Content="20"/>
+            <ComboBoxItem Content="50"/>
+            <ComboBoxItem Content="100"/>
+            <ComboBoxItem Content="200"/>
+            <ComboBoxItem Content="500"/>
+        </ComboBox>
     </Grid>
 </Window>
